=======
CHANGES
=======

0.4.0beta7
----------
- Added initial Sybase support (mxODBC so far) [ticket:785]

- Added partial index support for PostgreSQL. Use the postgres_where keyword
  on the Index.

- backref remove object operation doesn't fail if the other-side
  collection doesn't contain the item, supports noload collections
  [ticket:813]

- The IdentifierPreprarer's _requires_quotes test is now regex based.  Any
  out-of-tree dialects that provide custom sets of legal_characters or
  illegal_initial_characters will need to move to regexes or override
  _requires_quotes.

- Firebird has supports_sane_rowcount and supports_sane_multi_rowcount set
  to False due to ticket #370 (right way).

- Improvements and fixes on Firebird reflection:
  . FBDialect now mimics OracleDialect, regarding case-sensitivity of TABLE and
    COLUMN names (see 'case_sensitive remotion' topic on this current file).
  . FBDialect.table_names() doesn't bring system tables (ticket:796).
  . FB now reflects Column's nullable property correctly.

- Fixed three- and multi-level select and deferred inheritance loading
  (i.e. abc inheritance with no select_table), [ticket:795]

- Ident passed to id_chooser in shard.py always a list.

- The no-arg ResultProxy._row_processor() is now the class attribute
  `_process_row`.

- Added support for returning values from inserts and udpates for
  PostgreSQL 8.2+. [ticket:797]

- PG reflection, upon seeing the default schema name being used explicitly
  as the "schema" argument in a Table, will assume that this is the the 
  user's desired convention, and will explicitly set the "schema" argument
  in foreign-key-related reflected tables, thus making them match only
  with Table constructors that also use the explicit "schema" argument
  (even though its the default schema).  
  In other words, SA assumes the user is being consistent in this usage.
  
- fixed sqlite reflection of BOOL/BOOLEAN [ticket:808]
